resources/sass/calendar/_variables-dark.scss
// Body
$body-bg: #121212;

// Typography
$font-family-sans-serif: 'Nunito', sans-serif;
$font-size-base: 0.9rem;
$line-height-base: 1.6;

// Colors
$blue: #3490dc;
$indigo: #6574cd;
$purple: #9561e2;
$pink: #f66d9b;
$red: #e3342f;
$orange: #f6993f;
$yellow: #ffed4a;
$green: #38c172;
$teal: #4dc0b5;
$cyan: #6cb2eb;

$calendar-border-color: rgba(0,0,0, 0.5);
$current-day-color: #9e6116;
$calendar-bg-color: #222;
$card-bg-color: #303030;
$accent-color-lighter: #379e6b;
$accent-color: #2f855a;
$accent-color-darker: #246645;
$accent-color-light: $accent-color;
$accent-color-light: #2f855a;
$sidebar-width: 27%;
$wiki-link-color: rgba(255,255,255,0.2);
$wiki-link-hover-color: white;
$main-text-color: rgba(255, 255, 255, 0.8);
$gray-secondary: #717171;
$action-bg-color: rgba(166, 168, 179, 0.32);
$action-icon-color: white;
$weather-tooltip-bg-color: rgba(0, 0, 0, 0.8);
$input-disabled-color: #848484;

$sortable-header-color: rgb(220, 220, 220, 0.5);

// Modal colors
$modal-bg-color: $bg-gray-900;
$modal-content-bg-color: $text-gray-800;
$modal-content-hover-bg-color: $text-gray-700;
$modal-action-color: $text-gray-100;
$modal-accent-background: $bg-gray-800;
$modal-accent-hover-background: $bg-gray-800;
$modal-content-border-color: $text-gray-800;

$btn-color: #1f5f73;
$btn-border: #1f4f5e;

$btn-color-hover: #1f424d;
$btn-border-hover: #1e4552;


// Minimalist colors
$m-even-bg: rgba(255, 255, 255, 0.05);
$m-odd-bg: initial;
$m-day-hover: rgba(255, 255, 255, 0.2);
$m-current-day: #fdb44d;

// SVG image data
$disabled-crosshatch: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%233d3d3d' fill-opacity='0.3' fill-rule='evenodd'%3E%3Cpath d='M0 40L40 0H20L0 20M40 40V20L20 40'/%3E%3C/g%3E%3C/svg%3E");
$warning-crosshatch: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23e3342f' fill-opacity='0.3' fill-rule='evenodd'%3E%3Cpath d='M0 40L40 0H20L0 20M40 40V20L20 40'/%3E%3C/g%3E%3C/svg%3E");

